--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -35,5 +35,9 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: citation-style-language/styles
+    - name: install
+      run: |
+        cd styles
+        bundle install
     - name: Run tests
       run: CSL_TEST="apa.csl vancouver.csl" bundle exec rspec spec
