--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -19,24 +19,29 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['3.0.2']
+        ruby-version: ['3.0']
 
     steps:
     - uses: actions/checkout@v2
     - name: Set up Ruby
     # To automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
     # change this to (see https://github.com/ruby/setup-ruby#versioning):
-    # uses: ruby/setup-ruby@v1
-      uses: ruby/setup-ruby@473e4d8fe5dd94ee328fdfca9f8c9c7afc9dae5e
+      uses: ruby/setup-ruby@v1
+    # uses: ruby/setup-ruby@473e4d8fe5dd94ee328fdfca9f8c9c7afc9dae5e
       with:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+
     - name: clone styles
       uses: actions/checkout@v2
       with:
         repository: citation-style-language/styles
-    - name: install
+
+    - name: Update rubygems and install gems
       run: |
+        gem update --system --silent --no-document
+        bundle config set without packaging documentation
         bundle install
+
     - name: Run tests
       run: CSL_TEST="apa.csl vancouver.csl" bundle exec rspec spec
