--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -36,6 +36,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: citation-style-language/styles
+        clean: false
 
     - name: Update rubygems and install gems
       run: |
@@ -44,4 +45,4 @@ jobs:
         bundle install
 
     - name: Run tests
-      run: CSL_TEST="apa.csl vancouver.csl ../twri-technical-report.csl" bundle exec rspec spec --format documentation
+      run: CSL_TEST="apa.csl vancouver.csl twri-technical-report.csl" bundle exec rspec spec --format documentation
