--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -48,5 +48,5 @@ jobs:
 
     - name: Run tests
       run: |
-        cp twri-technical-report.csl /styles
+        cp twri-technical-report.csl ../styles
         CSL_TEST="apa.csl vancouver.csl twri-technical-report.csl" bundle exec rspec spec --format documentation
