try moving csl file into correct directoryx4

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -49,4 +49,5 @@ jobs:
     - name: Run tests
       run: |
         cp twri-technical-report.csl ../styles
+        cd styles
         CSL_TEST="apa.csl vancouver.csl twri-technical-report.csl" bundle exec rspec spec --format documentation
