try moving csl file into correct directoryx5

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -48,6 +48,6 @@ jobs:
 
     - name: Run tests
       run: |
-        cp twri-technical-report.csl ../styles
         cd styles
-        CSL_TEST="apa.csl vancouver.csl twri-technical-report.csl" bundle exec rspec spec --format documentation
+        cp ../twri-technical-report.csl .
+        CSL_TEST="apa.csl twri-technical-report.csl" bundle exec rspec spec --format documentation
