--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -22,9 +22,49 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
-
-      - uses: r-lib/actions/setup-renv@v2
-
+          
+      - name: Setup renv
+        using: "composite"
+        steps:
+          - name: Set RENV_PATHS_ROOT
+            shell: bash
+            working-directory: bookdown
+            run: |
+              echo "RENV_PATHS_ROOT=${{ runner.temp }}/renv" >> $GITHUB_ENV
+              
+          - name: Install and activate renv
+            run: |
+              install.packages("renv")
+              renv::activate()
+            shell: Rscript {0}
+            
+          - name: Get R and OS version
+            id: get-version
+            run: |
+              cat("##[set-output name=os-version;]", sessionInfo()$running, "\n", sep = "")
+              cat("##[set-output name=r-version;]", R.Version()$version.string, sep = "")
+            shell: Rscript {0}
+            
+          - name: Restore Renv package cache
+            uses: actions/cache@v2
+            with:
+              path: ${{ env.RENV_PATHS_ROOT }}
+              key: ${{ steps.get-version.outputs.os-version }}-${{ steps.get-version.outputs.r-version }}-${{inputs.cache-version }}-${{ hashFiles('renv.lock') }}
+              restore-keys: ${{ steps.get-version.outputs.os-version }}-${{ steps.get-version.outputs.r-version }}-${{inputs.cache-version }}-
+                 
+          - name: Install renv dependencies
+            working-directory: bookdown
+            run: renv::restore()
+            shell: Rscript {0}
+      
+          - name: Don't use tar 1.30 from Rtools35 to store the cache
+            working-directory: bookdown
+            shell: bash
+            run: |
+              if command -v /c/Rtools/bin/tar && /c/Rtools/bin/tar --version | grep -q 'tar (GNU tar) 1.30'
+              then echo 'C:/Program Files/Git/usr/bin' >> $GITHUB_PATH
+              fi
+              
       - name: Cache bookdown results
         uses: actions/cache@v2
         with:
