--- a/.github/workflows/bookdown.yaml
+++ b/.github/workflows/bookdown.yaml
@@ -30,6 +30,7 @@ jobs:
           restore-keys: bookdown-
 
       - name: Build site
+        working-directory: ./book
         run: Rscript -e 'bookdown::render_book("index.Rmd", quiet = TRUE)'
 
       - name: Deploy to GitHub pages 🚀
