--- a/book/_output.yml
+++ b/book/_output.yml
@@ -2,15 +2,12 @@ bookdown::bs4_book:
   css: bs4_style.css
   theme:
     primary: "#096B72"
+    base_font:
+      google: EB Garamond
+    heading_font:
+      google: Oswald
   repo: 
     base: https://github.com/TxWRI/csl
     branch: main
     subdir: book
   split_bib: true
-bookdown::pdf_book:
-  includes:
-    in_header: preamble.tex
-  latex_engine: xelatex
-  citation_package: natbib
-  keep_tex: yes
-bookdown::epub_book: default
