--- a/book/_output.yml
+++ b/book/_output.yml
@@ -3,7 +3,7 @@ bookdown::bs4_book:
   theme:
     primary: "#096B72"
     base_font:
-      google: "EB Garamond"
+      google: Source Serif Pro
     heading_font:
       google: Oswald
   repo: 
