clean and keep nojekyll

--- a/.github/workflows/bookdown.yaml
+++ b/.github/workflows/bookdown.yaml
@@ -39,3 +39,5 @@ jobs:
         with:
           branch: gh-pages
           folder: ./book/_book
+          clean: true
+          clean-exclude: .nojekyll
